--- a/eduwork.html
+++ b/eduwork.html
@@ -31,9 +31,9 @@
 <p><div id="Academic Experience"></p>
 <h2>Academic Experience</h2>
 <ul>
-<li><p>*Jan. 2023 - Present: Assistant Professor, School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin, Ireland</p>
+<li><p>Jan. 2023 - Present: Assistant Professor, School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin, Ireland</p>
 </li>
-<li><p>Jan. 2020 - Present: Research Professor, Pusan National University, South Korea</p>
+<li><p>Jan. 2020 - Jan. 2023: Research Professor, Pusan National University, South Korea</p>
 </li>
 <li><p>Mar. 2018 - Dec. 2019: Research Professor, Changwon National University / Inje University, South Korea</p>
 </li>
