--- a/team.html
+++ b/team.html
@@ -28,11 +28,11 @@
 <div id="toptitle">
 <h1>Research Team</h1>
 </div>
-<p>If you have a passion for world-leading research into computing, intelligence, and networking and want to explore our collabroation, please feel free to drop an <a href="mailto:vietpq@pusan.ac.kr">email</a>.</p>
+<p>If you have a passion for world-leading research into computing, intelligence, and networking and want to explore our collabroation, please feel free to drop an <a href="mailto:phamq@tcd.ie">email</a>.</p>
 <p><div id="Faculty"></p>
 <h2>Faculty</h2>
 <ul>
-<li><p>Quoc-Viet Pham: Pusan National University (Yangsan campus),  Republic of Korea</p>
+<li><p>Quoc-Viet Pham: School of Computer Science and Statistics, Trinity College Dublin, the University of Dublin</p>
 </li>
 </ul>
 <p></div></p>
