--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="Misc\Portrait_Viet.jpg" alt="" width="180px" height="210px" />&nbsp;</td>
-<td align="left"><p><a href="mailto:phamq@tcd.ie">Pham Quoc Viet</a> <br />
+<td align="left"><p><a href="mailto:phamq@tcd.ie">Viet Quoc Pham (Phạm Quốc Việt in Vietnamese)</a> <br />
 Assistant Professor, Ph.D. <br /> 
 <a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></p>
- *You can address me as Viet (first name), Pham (surname), or Pham Quoc Viet (full name) <br />
 <p><div id="Contacts"></p>
 <h2>Contacts</h2>
 <ul>
