--- a/team.html
+++ b/team.html
@@ -32,7 +32,7 @@
 <p><div id="Faculty"></p>
 <h2>Faculty</h2>
 <ul>
-<li><p>Quoc-Viet Pham: School of Computer Science and Statistics, Trinity College Dublin, the University of Dublin</p>
+<li><p>Pham Quoc Viet: School of Computer Science and Statistics, Trinity College Dublin, the University of Dublin</p>
 </li>
 </ul>
 <p></div></p>
