--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="Misc\Portrait_Viet.jpg" alt="" width="180px" height="210px" />&nbsp;</td>
-<td align="left"><p><a href="mailto:phamq@tcd.ie">Viet Quoc Pham (Phạm Quốc Việt in Vietnamese)</a> <br />
+<td align="left"><p><a href="mailto:phamq@tcd.ie">Viet Quoc Pham (firstname: Viet, surname: Pham)</a> <br />
 Assistant Professor, Ph.D. <br /> 
 <a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></p>
 <p><div id="Contacts"></p>
