--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="Misc\Portrait_Viet.jpg" alt="" width="180px" height="210px" />&nbsp;</td>
-<td align="left"><p><a href="mailto:phamq@tcd.ie">Viet Quoc PHAM</a> <br />
+<td align="left"><p><a href="mailto:viet.pham@tcd.ie">Viet Quoc PHAM</a> <br />
 [first name] [middle name] [family name] <br /> 
 Assistant Professor, Ph.D. <br /> 
 <a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></p>
 <p><div id="Contacts"></p>
 <h2>Contacts</h2>
 <ul>
-<li><p>E-mail: <a href="mailto:phamq@tcd.ie">phamq@tcd.ie</a> / <a href="mailto:vietpq90@gmail.com">vietpq90@gmail.com</a></p>
+<li><p>E-mail: <a href="mailto:viet.pham@tcd.ie">viet.pham@tcd.ie</a> / <a href="mailto:vietpq90@gmail.com">vietpq90@gmail.com</a></p>
 </li>
 <li><p>Phone: (+383) 083 475 5354</p>
 </li>
