--- a/team.html
+++ b/team.html
@@ -28,7 +28,7 @@
 <div id="toptitle">
 <h1>Research Team</h1>
 </div>
-<p>If you have a passion for world-leading research into computing, intelligence, and networking and want to explore our collabroation, please feel free to drop an <a href="mailto:phamq@tcd.ie">email</a>.</p>
+<p>If you have a passion for world-leading research into computing, intelligence, and networking and want to explore our collabroation, please feel free to drop an <a href="mailto:viet.pham@tcd.ie">email</a>.</p>
 <p><div id="Faculty"></p>
 <h2>Faculty</h2>
 <ul>
