--- a/teaching.html
+++ b/teaching.html
@@ -31,6 +31,8 @@
 <p><div id="Teaching"></p>
 <h2>Teaching</h2>
 <ul>
+<li><p>2023 Spring: Microprocessor Systems (CSU23021)</p>
+</li>  
 <li><p>2021 Winter: Artificial Intelligence for NextG Networks</p>
 </li>
 <li><p>2019 Fall: Game Theory I</p>
