--- a/eduwork.html
+++ b/eduwork.html
@@ -33,6 +33,10 @@
 <ul>
 <li><p>Jan. 2023 - Present: Assistant Professor, School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin, Ireland</p>
 </li>
+<li><p>Jan. 2023 - Present: Supervisor, SFI Centre for Research Training focused on Future Networks and the Internet of Things (AdvanceCRT), Ireland</p>
+</li>
+<li><p>Jan. 2023 - Present: Associate Investigator, SFI Centre for Future Networks and Communications (CONNECT), Ireland</p>
+</li>
 <li><p>Jan. 2020 - Jan. 2023: Research Professor, Pusan National University, South Korea</p>
 </li>
 <li><p>Mar. 2018 - Dec. 2019: Research Professor, Changwon National University / Inje University, South Korea</p>
@@ -68,7 +72,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-07 12:08:56 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-16 15:46:02 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
