--- a/publication.html
+++ b/publication.html
@@ -41,9 +41,9 @@
 <p><div id="Book Chapters"></p>
 <h2>Book Chapters</h2>
 <ol>
-<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">The Emergence of Aerial Computing: Applications and Challenges</a>,&rdquo; in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
+<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738">The Emergence of Aerial Computing: Applications and Challenges</a>,&rdquo; in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
 </li>
-<li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &ldquo;<a href="">Resource Allocation for IRS-Empowered Wireless Communications</a>,&rdquo; in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
+<li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &ldquo;<a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738">IRS-Empowered Wireless Communications: State-of-the-Art, Key Techniques, and Open Issues</a>,&rdquo; in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="https://digital-library.theiet.org/content/books/10.1049/pbte104e_ch5">Artificial Intelligence and Big Data for COVID-19 and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET Digital Library, 2022.</p>
 </li>
@@ -78,8 +78,6 @@
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://arxiv.org/abs/2202.11508">Adaptive mm-Waveform for Autonomous Vehicles with Integrated Communication and Sensing</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
-<li><p>T. R. Gadekallu, T. Huynh-The, W. Wang, G. Yenduri, P. Ranaweera, <b>Q.-V. Pham</b>, D. B. da Costa, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2203.09738">Blockchain for the Metaverse: A Review</a>,&rdquo; under review, <i>Future Generation Computer Systems</i>.</p>
-</li>
 <li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under review, <i>Engineering Applications of Artificial Intelligence</i>.</p>
 </li>
 <li><p>M. Alazab, R. Vinayakumar, S. Srinivasan, <b>Q.-V. Pham</b>, S. Venkatraman, Soman KP, and K. Simran, &ldquo;<a href="https://www.techrxiv.org/articles/preprint/Deep_Learning_for_Cyber_Security_Applications_A_Comprehensive_Survey/16748161/1">Deep Learning for Cyber Security Applications: A Comprehensive Survey</a>,&rdquo; under revision, <i>IEEE Communications Surveys and Tutorials</i>.</p>
@@ -89,13 +87,13 @@
 <p><div id="2022 and In Press"></p>
 <h2>2023 and In Press</h2>
 <ol>
-<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; <i>IEEE Transactions on Cognitive Communications and Networking</i>, in press.</p>
+<li><p>T. Huynh-The, T. R. Gadekallu, W. Wang, G. Yenduri, P. Ranaweera, <b>Q.-V. Pham</b>, D. B. da Costa, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2203.09738">Blockchain for the Metaverse: A Review</a>,&rdquo; <i>Future Generation Computer Systems</i>, in press.</p>
+</li>
+<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9964377">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; <i>IEEE Transactions on Cognitive Communications and Networking</i>, in press.</p>
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9942348">Hybrid Long-and Short-Packet Based NOMA Systems with Joint Power Allocation and Beamforming Design</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, K.-H. Kwon, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9908294">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; <i>IEEE Systems Journals</i>, in press. [<a href="https://github.com/vannguyentoan/OFDM_Modulation_Classification">MATLAB Code</a>]</p>
-</li>
-<li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9854848">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
 </li>
 <li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
 </li>
@@ -110,6 +108,8 @@
 <p><div id="2022"></p>
 <h2>2022</h2>
 <ol>
+<li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9854848">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 24, pp. 25596-25611, 15 Dec.15, 2022.</p>
+</li>
 <li><p>S. K. Jagatheesaperumal, <b>Q.-V. Pham</b>, R. Ruby, Z. Yang, C. Xu, and Z. Zhang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9930971">Explainable AI over the Internet of Things (IoT): Overview, State-of-the-Art and Future Directions</a>,&rdquo; <i>IEEE Open Journal of the Communications Society</i>, vol. 3, pp. 2106-2136, Nov. 2022.</p>
 </li>
 <li><p>P. K. R. Maddikunta, <b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, O. Aouedi, G. Yenduri, S. Bhattacharya, and T. R. Gadekallu, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1084804522001138">Incentive techniques for the Internet of Things: A survey</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, vol. 206, pp. 103464, Oct. 2022.</p>
@@ -346,7 +346,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-24 09:29:57 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-16 15:43:12 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
