--- a/teaching.html
+++ b/teaching.html
@@ -32,7 +32,7 @@
 <h2>Teaching</h2>
 <ul>
 <li><p>2023 Spring: Microprocessor Systems (CSU23021)</p>
-</li>  
+</li>
 <li><p>2021 Winter: Artificial Intelligence for NextG Networks</p>
 </li>
 <li><p>2019 Fall: Game Theory I</p>
@@ -68,7 +68,7 @@
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-07 12:10:08 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-16 15:38:52 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
