--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a></p>
 </li>
-<li><p>Address: Address: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, Dublin 2, Ireland</p>
+<li><p>Address: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, Dublin 2, Ireland</p>
 </li>
 </ul>
 </td></tr></table>
