--- a/publication.html
+++ b/publication.html
@@ -56,7 +56,15 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, M. Debbah, and S. Kim, &ldquo;<a href="">Physical-Layer Security Design for Short-Packet NOMA Systems Against Internal Eavesdropping</a>,&rdquo; submitted, <i>IEEE International Conference on Communications (ICC)</i>, 2023.</p>
+<li><p>Y. Ding, Z. Yang, <b>Q.-V. Pham</b>, Z. Zhang, and M. Shikh-Bahaei, &ldquo;<a href="https://arxiv.org/abs/2301.00912">Distributed Machine Learning for UAV Swarms: Computing, Sensing, and Semantics</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
+</li>
+<li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="Physical">Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
+</li>
+<li><p>T.-H. Vu, K.-T. Nguyen, <b>Q.-V. Pham</b>, V. N. Q. Bao, and S. Kim, &ldquo;<a href="">Outage Performance of THz-aided NOMA Systems with Spherical Stochastic Model</a>,&rdquo; submitted, <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, 2023.</p>
+</li>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, M. Debbah, and S. Kim, &ldquo;<a href="">Physical-Layer Security in Short-Packet NOMA Systems with Untrusted Near User</a>,&rdquo; submitted, <i>IEEE International Conference on Communications (ICC)</i>, 2023.</p>
+</li>
+<li><p>X.-T. Nguyen, M.-D. Nguyen, <b>Q.-V. Pham</b>, V.-Q. Do, and W.-J. Hwang, "<a href="https://arxiv.org/abs/2206.06976">Resource Allocation for Compression-aided Federated Learning with High Distortion Rate</a>,” submitted, <i>IEEE International Conference on Communications (ICC)</i>, 2023.</p>
 </li>
 <li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; submitted, <i>International Conference on Learning Representations (ICLR)</i>, 2023.</p>
 </li>
@@ -87,7 +95,7 @@
 <p><div id="2022 and In Press"></p>
 <h2>2023 and In Press</h2>
 <ol>
-<li><p>T. Huynh-The, T. R. Gadekallu, W. Wang, G. Yenduri, P. Ranaweera, <b>Q.-V. Pham</b>, D. B. da Costa, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2203.09738">Blockchain for the Metaverse: A Review</a>,&rdquo; <i>Future Generation Computer Systems</i>, in press.</p>
+<li><p>T. Huynh-The, T. R. Gadekallu, W. Wang, G. Yenduri, P. Ranaweera, <b>Q.-V. Pham</b>, D. B. da Costa, and M. Liyanage, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S0167739X23000493">Blockchain for the Metaverse: A Review</a>,&rdquo; <i>Future Generation Computer Systems</i>, in press.</p>
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9964377">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; <i>IEEE Transactions on Cognitive Communications and Networking</i>, in press.</p>
 </li>
@@ -346,7 +354,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-16 15:43:12 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-17 10:00:38 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
