--- a/grantaward.html
+++ b/grantaward.html
@@ -18,7 +18,7 @@
 <div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html" class="current">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="team.html">Research&nbsp;Team</a></div>
+<div class="menu-item"><a href="team.html">Team&nbsp;and&nbsp;Openings</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-category">Miscellany</div>
 <div class="menu-item"><a href="ebook.html">Ebooks</a></div>
@@ -64,7 +64,7 @@ Pusan National University</p>
 <p><div id="Awards"></p>
 <h2>Awards</h2>
 <ul>
-<li><p>Best paper award, IEEE International Conference On Advanced Technologies for Communications (ATC), 2022.</p>
+<li><p>Best paper award, IEEE International Conference on Advanced Technologies for Communications (ATC), 2022.</p>
 </li>
 <li><p>World's top 2% of scientists on Stanford University list, 2021-2022.</p>
 </li>
@@ -83,7 +83,7 @@ Pusan National University</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-21 09:41:00 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-17 18:35:35 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
