--- a/team.html
+++ b/team.html
@@ -18,7 +18,7 @@
 <div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="team.html" class="current">Research&nbsp;Team</a></div>
+<div class="menu-item"><a href="team.html" class="current">Team&nbsp;and&nbsp;Openings</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-category">Miscellany</div>
 <div class="menu-item"><a href="ebook.html">Ebooks</a></div>
@@ -28,45 +28,50 @@
 <div id="toptitle">
 <h1>Research Team</h1>
 </div>
-<p>If you have a passion for world-leading research into computing, intelligence, and networking and want to explore our collabroation, please feel free to drop an <a href="mailto:viet.pham@tcd.ie">email</a>.</p>
+<p><b>Prospective collaborators</b>: If you have a passion for world-leading research into computing, intelligence, and networking, and want to explore our colloboration, please feel free to drop an <a href="mailto:viet.pham@tcd.ie">email</a>. </p>
+<p><b>Prospective students</b>: Scholarships are also available for self-motivated students. Please feel free to send me your resume, transcripts, and publications (if available). I apologize that I shall not reply due to a large number of received emails. I will get back to you should further information is needed.</p>
 <p><div id="Faculty"></p>
 <h2>Faculty</h2>
 <ul>
-<li><p>Pham Quoc Viet: School of Computer Science and Statistics, Trinity College Dublin, the University of Dublin</p>
+<li><p>Viet Quoc Pham: School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin</p>
 </li>
 </ul>
 <p></div></p>
 <p><div id="Students"></p>
 <h2>Students</h2>
 <ul>
-<li><p>Le Thi Mai [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2021/03-Present] - Topic: Wireless AI and aerial access networks (co-supervised with Prof. <a href="mailto:wjhwang@pusan.ac.kr">Won-Joo Hwang</a>)</p>
+<li><p>Le Thi Mai [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2021/03-Present] - Topic: Wireless AI and aerial access networks (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Swe Swe Latt [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: FL and 6G resource optimization (co-supervised with Prof. <a href="mailto:wjhwang@pusan.ac.kr">Won-Joo Hwang</a>)</p>
+<li><p>Swe Swe Latt [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: FL and 6G resource optimization (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Dao Thien Thanh [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: Deep learning and depth map (co-supervised with Prof. <a href="mailto:wjhwang@pusan.ac.kr">Won-Joo Hwang</a>)</p>
+<li><p>Dao Thien Thanh [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: Deep learning and depth map (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Nguyen Minh Duong [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: DRL and FL for 6G IoT (co-supervised with Prof. <a href="mailto:wjhwang@pusan.ac.kr">Won-Joo Hwang</a>)</p>
+<li><p>Nguyen Minh Duong [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: DRL and FL for 6G IoT (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Nadia Iradukunda [<a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09-Present] - Topic: UAV communications in 5G and beyond (co-supervised with Prof. <a href="mailto:wjhwang@pusan.ac.kr">Won-Joo Hwang</a> and prof. <a href="mailto:heeki@inje.ac.kr">Hee-Cheol Kim</a>)</p>
+<li><p>Daeil Noh [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: Deep learning for radio signal processing (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+</li>
+<li><p>Sang Min Lee [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: communication-efficient FL for massive IoT in future 6G (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>) </p>
 </li>
 </ul>
 <p></div></p>
 <p><div id="Alumnus"></p>
 <h2>Alumnus</h2>
 <ul>
-<li><p>Le Thi Mai [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03-2021/02] - Topic: Swarm intelligence for D2D communications (co-supervised with Prof. <a href="mailto:wjhwang@pusan.ac.kr">Won-Joo Hwang</a>)</p>
+<li><p>Nadia Iradukunda [<a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09-2022/08] - Topic: UAV communications in 5G and beyond (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a> and <a href="mailto:heeki@inje.ac.kr">Prof. Hee-Cheol Kim</a>)</p>
 </li>
-<li><p>Vo Ta Hoang [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2020/02] : Resource allocation for mobile edge computing systems (co-supervised with Prof. <a href="mailto:wjhwang@pusan.ac.kr">Won-Joo Hwang</a>)</p>
+<li><p>Le Thi Mai [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03-2021/02] - Topic: Swarm intelligence for D2D communications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a> and <a href="mailto:heeki@inje.ac.kr">Prof. Hee-Cheol Kim</a>)</p>
 </li>
-<li><p>Hoang Huu Trung [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02]: Machine learning for healthcare applications (co-supervised with Prof. <a href="mailto:wjhwang@pusan.ac.kr">Won-Joo Hwang</a>)</p>
+<li><p>Vo Ta Hoang [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2020/02] : Resource allocation for mobile edge computing systems (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Nguyen Tien Hoang [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: Coalitional games for NOMA-MEC computation offloading (co-supervised with Prof. <a href="mailto:wjhwang@pusan.ac.kr">Won-Joo Hwang</a>) </p>
+<li><p>Hoang Huu Trung [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02]: Machine learning for healthcare applications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Maurice Nduwayezu [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: DRL for NOMA-MEC computation offloading (co-supervised with Prof. <a href="mailto:wjhwang@pusan.ac.kr">Won-Joo Hwang</a>)</p>
+<li><p>Nguyen Tien Hoang [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: Coalitional games for NOMA-MEC computation offloading (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>) </p>
 </li>
-<li><p>Girmay Gebremariam Gebrelibanos [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: D2D communications with unlicensed spectrum (co-supervised with Prof. <a href="mailto:wjhwang@pusan.ac.kr">Won-Joo Hwang</a>)</p>
+<li><p>Maurice Nduwayezu [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: DRL for NOMA-MEC computation offloading (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Akmal Azizan bin Md Zin [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: Blockchain for smart healthcare applications (co-supervised with Prof. <a href="mailto:wjhwang@pusan.ac.kr">Won-Joo Hwang</a>)</p>
+<li><p>Girmay Gebremariam Gebrelibanos [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: D2D communications with unlicensed spectrum (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+</li>
+<li><p>Akmal Azizan bin Md Zin [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: Blockchain for smart healthcare applications (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
 </ul>
 <p><div id="Visiting Scholars"></p>
@@ -78,12 +83,66 @@
 <p><div id="Visiting Students"></p>
 <h2>Visiting Students</h2>
 <ul>
-<li><p>to be update</p>
+<li><p><a href="https://sites.google.com/site/vuthaihoc1995/">Thai-Hoc Vu</a>: MS-PhD combined program, University of Ulsan, Korea (Jan. 2022)</p>
+</li>
+</ul>
+<p><div id="Collaborators"></p>
+<h2>Collaborators</h2>
+<ul>
+<li><p><a href="https://wireless-ai.github.io/">Prof. Won-Joo Hwang</a>: Pusan National University (PNU), Korea</p>
+</li>
+<li><p><a href="http://www2.egr.uh.edu/~zhan2/">Prof. Zhu Han</a>: University of Houston, USA</p>
+</li>
+<li><p><a href="https://personalpages.manchester.ac.uk/staff/zhiguo.ding/index">Prof. Zhiguo Ding</a>: University of Manchester, UK</p>
+</li>
+<li><p><a href="https://sites.google.com/view/dinh-thai-hoang/">Prof. Dinh Thai Hoang</a>: University of Technology Sydney (UTS), Australia  </p>
+</li>
+<li><p><a href="https://sites.google.com/view/diep-n-nguyen">Prof. Diep Ngoc Nguyen</a>: University of Technology Sydney (UTS), Australia  </p>
+</li>
+<li><p><a href="http://necphy-lab.com/">Prof. Long Bao Le</a>: University of Quebec, Canada</p>
+</li>
+<li><p><a href="https://sites.google.com/site/thienhuynhthe">Prof. Thien Huynh-The</a>: Ho Chi Minh City University of Technology and Education (HCMUTE), Vietnam</p>
+</li>
+<li><p><a href="https://www.madhusanka.com/">Prof. Madhusanka Liyanage</a>: University College Dublin (UCD), Ireland</p>
+</li>
+<li><p><a href="https://www.eng.uwo.ca/electrical/faculty/fang_f/index.html">Prof. Fang Fang</a>: Western University, Canada</p>
+</li>
+<li><p><a href="https://sites.google.com/mun.ca/ming-zeng">Prof. Ming Zeng</a>: Laval University, Canada</p>
+</li>
+<li><p><a href="https://pshhlab.github.io/nndao">Prof. Nhu-Ngoc Dao</a>: Sejong University, Korea</p>
+</li>
+<li><p><a href="https://sites.google.com/site/szuruby/">Prof. Rukhsana Ruby</a>: Shenzhen University, China</p>
+</li>
+<li><p><a href="https://junzhaogroupntu.github.io/">Prof. Jun Zhao</a>: Nanyang Technological University (NTU), Singapore</p>
+</li>
+<li><p><a href="https://sites.google.com/view/thippareddygadekallu">Prof. Thippa Reddy Gadekallu</a>: Vellore Institute of Technology, India</p>
+</li>
+<li><p><a href="https://sites.google.com/site/danielbenevides81/">Prof. Daniel Benevides da Costa</a>: Technology Innovation Institute (TII), UAE</p>
+</li>
+<li><p><a href="https://nsc.deakin.edu.au/">Prof. Pubudu N. Pathirana</a>: Deakin University, Australia</p>
+</li>
+<li><p>...</p>
+</li>
+</ul>
+<p><div id="Openings"></p>
+<h2>Openings</h2>
+<ul>
+<li><p>You are invited to apply for <a href="https://marie-sklodowska-curie-actions.ec.europa.eu/calls/msca-postdoctoral-fellowships-2023">MSCA Postdoctoral Fellowships 2023</a>. <br />
+Deadline: 13 September 2023 (proposal submisison). <br />
+Note: You should contact me earlier to discuss our research interests and prepare the proposal. </p>
+</li>
+</ul>
+<ul>
+<li><p>Thirty (30) PhD scholarships are offered by <a href="https://www.advance-crt.ie/">SFI AdvanceCRT</a>. <br />
+Please feel free to contact me if you are qualified for this scholarship, wanna join at <a href="https://www.tcd.ie/">Trinity College Dublin</a>, or interested in working with me on emerging topics like IoT/6G/AI/Security. <br />
+Deadline: 17th March 2023. <br />
+Link: <a href="https://www.advance-crt.ie/apply/">ADVANCE CRT PhD recruitment call</a> <br />
+Note: You should contact me in advance to have me as your supervisor.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-30 15:15:48 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-17 19:00:15 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
