--- a/ebook.html
+++ b/ebook.html
@@ -18,7 +18,7 @@
 <div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="team.html">Research&nbsp;Team</a></div>
+<div class="menu-item"><a href="team.html">Team&nbsp;and&nbsp;Openings</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-category">Miscellany</div>
 <div class="menu-item"><a href="ebook.html" class="current">Ebooks</a></div>
@@ -44,7 +44,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-30 15:15:56 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-17 18:35:49 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
